# Privacy-Shield

./: .gitignore  .gitmodules  Doc.md  PROJECT.md  README.md  SETUP.md  VERIFICATION_DATA_FLOW.md  implementation_plan.md  package-lock.json  package.json  plan.md  readme.md
AI/: index.html  package-lock.json  package.json  vite.config.js
AI/demo/: index.html
AI/src/: App.jsx  biometricPipeline.js  embeddingExtractor.js  fuzzyExtractor.js  index.css  livenessDetector.js
AI/test/: smoke.js
cache/: solidity-files-cache.json
circuits/: circuit_final.zkey  cli_proof.json  cli_public.json  pot12_0001.ptau  privacy.circom  privacy.r1cs  privacy_0000.zkey  privacy_final.zkey  test_browser_inputs.json  test_cli_proof_submit.js  test_direct_verifier.js  test_ethers_call.js  test_hex_proof_submit.js  test_input.json  test_proof_debug.json  test_real_input.json  verification_key.json  verifier.sol  vkey_test.json  witness_real.wtns
circuits/learnings/: commandsToRun.md  doc.md
circuits/privacy_js/: privacy.wasm
contracts/: Verifier.sol
contracts/privacy-shield/: deploy.sh  (+2 more)
relayer/: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  data.jsonc  replay_attempts.json  test-data.json  test-full-flow.sh
relayer/src/: Cargo.toml  main 2.rs  main.rs
relayer/src/src/: groth16_verifier.rs  i_verifier.rs  lib.rs  privacy_shield.rs  std_constants.rs
ui/: ARCHITECTURE.md  SUMMARY.md  calc_nullifier.js  package-lock.json  package.json  test_circuit_logic.js  test_ethers_call.js  test_poseidon.js  test_proof_gen.js  verify_inputs.js  vkey.json
(+51 files in other folders)
